--- a/src/michaelmas/ui/styles.css
+++ b/src/michaelmas/ui/styles.css
@@ -4,12 +4,12 @@ Screen {
 
 #app-grid {
     layout: horizontal;
-    height: 100%;
+    height: 1fr;
 }
 
 #sidebar {
     width: 35;
-    height: 100%;
+    height: 98%;
     background: $surface;
     border-right: vkey $primary;
     dock: left;
@@ -17,7 +17,7 @@ Screen {
 
 #main-content {
     width: 1fr;
-    height: 100%;
+    height: 98%;
 }
 
 #log {
@@ -31,10 +31,12 @@ Screen {
 }
 
 #status {
-    height: 1;
-    background: $primary-darken-2;
+    height: 2;
+    width: 100%;
+    background: $background-lighten-1;
     color: $text;
     content-align: center middle;
+    border-top: tall $background-lighten-2;
 }
 
 /* --- Model Selection Modal --- */
