--- a/src/michaelmas/ui/styles.css
+++ b/src/michaelmas/ui/styles.css
@@ -1,5 +1,6 @@
 Screen {
     overflow: hidden;
+    background: $background-darken-3;
 }
 
 #app-grid {
@@ -9,34 +10,40 @@ Screen {
 
 #sidebar {
     width: 35;
-    height: 98%;
+    height: 100%;
     background: $surface;
-    border-right: vkey $primary;
+    border: round $primary;
     dock: left;
+    margin: 1 0 1 1;
 }
 
 #main-content {
     width: 1fr;
-    height: 98%;
+    height: 100%;
+    margin: 1 1 0 1;
 }
 
 #log {
     height: 1fr;
+    background: $surface;
+    border: round $primary;
     margin-bottom: 1;
-    border: tall $background-lighten-2;
 }
 
 #input {
-    height: 6;
+    height: 8;
+    background: $surface;
+    border: round $primary;
 }
 
 #status {
-    height: 2;
+    height: 3;
     width: 100%;
-    background: $background-lighten-1;
+    background: $surface;
     color: $text;
+    border: round $primary;
     content-align: center middle;
-    border-top: tall $background-lighten-2;
+    margin: 1 1 1 1;
 }
 
 /* --- Model Selection Modal --- */
